# cryppo

./: CMakeLists.txt  Makefile  README.md  cros_debug.sh  cryptosmite.md  cryptosmite.sh  cryptosmite_host.sh  poc.sh  sed  verity_bypass_full_poc.sh  verity_bypass_poc.sh
buildenv/: Dockerfile  build.sh
crafter/: userdataauth.cpp  userdataauth.h
dbus_bindings/: org.chromium.UserDataAuth.xml
include/: ab.h  cryptohome.adaptor.h  org.chromium.CryptohomeKeyDelegateInterface.adapter.h  org.chromium.CryptohomeKeyDelegateInterface.proxy.h  org.chromium.UserDataAuth.adapter.h  org.chromium.UserDataAuth.proxy.h
smite_keygen/: index.html
vsh_breakout/: index.html
web_builder/: cmdline.txt  index.html  index.js  v86.wasm
